--- a/paginas/Automfutu.html
+++ b/paginas/Automfutu.html
@@ -116,7 +116,8 @@
         principalmente en facilitar que los trabajadores se centren en las actividades cualificadas, dejando las no
         imprescindibles.</p>
       <br>
-      <img height="200" width="400" src="../Imagenes/robot_produccion.jpg" alt="">
+      <div>
+        <img height="300" width="500" src="../Imagenes/robot_produccion.jpg" alt=""></div>
       <br>
       <p style="text-align: justify;">La realidad presente es que, gracias a la aceleración del avance tecnológico,
         estamos asistiendo a un periodo
