--- a/paginas/Automfutu.html
+++ b/paginas/Automfutu.html
@@ -127,7 +127,7 @@
         cliente. Y esto hace que los profesionales tengan que ir adquiriendo nuevas habilidades y adaptándose a estas
         máquinas cada vez más competentes que los acompañan en el lugar de trabajo.</p>
       <br>
-      <h2>El robot de hoy en día, una máquina capaz de tomar decisiones</h2>
+      <h2 class="display-6">El robot de hoy en día, una máquina capaz de tomar decisiones</h2>
       <br>
 
       <p style="text-align: justify;">Es muy probable que tengamos una idea distorsionada de lo que un robot es capaz de
@@ -145,7 +145,7 @@
         capacitados para realizar tareas más precisas, y que se están erigiendo como los protagonistas de esta nueva
         revolución.</p>
       <br>
-      <h2>Las habilidades humanas garantizan la empleabilidad </h2>
+      <h2 class="display-6">Las habilidades humanas garantizan la empleabilidad </h2>
       <br>
       <p style="text-align: justify;">A pesar de los datos -en la actualidad, <strong>entre un 30% y un 40% de los
           procesos que se ejecuta dentro de una
@@ -171,6 +171,7 @@
     <div class="col-2"></div>
     <div class="col-2"></div>
     <div class="col-8">
+      <h2 >Articulos similares</h2><br>
       <div class="row">
         <div class="col-4">
           <div class="card" style="width: 18rem;">
