--- a/paginas/nuesservis.html
+++ b/paginas/nuesservis.html
@@ -19,7 +19,7 @@
     <div class="col-12">
       <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark barrnav">
         <div class="container-fluid">
-          <i class="navbar-brand" href="#">Tecnologias de la Información</i>
+          <i class="navbar-brand" href="#">Tecnologías DLI</i>
 
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
