--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <div class="text-center col-12">
 
-      <h1 class="text-center display-5">Bienvenido a Tecnologias de la información</h1>
+      <h1 class="text-center display-5">Bienvenido a Tecnologías DLI</h1>
       <br>
       <img height="400" width="935" src="Imagenes/fondotecnologias.jpg" alt="Imagen de la automatizacion">
       <br>
