--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="col-12">
       <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark nabegator">
         <div class="container-fluid">
-          <i class="navbar-brand" href="#"><h1>Tecnologias DLI</h1></i>
+          <i class="navbar-brand" href="#">Tecnologias DLI</i>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
