--- a/paginas/poliprivacid.html
+++ b/paginas/poliprivacid.html
@@ -120,7 +120,7 @@
         <div class="footer-links">
           <h4>Siguenos</h4>
           <div class="social-link">
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://www.facebook.com/profile.php?id=61556467257634"><i class="fab fa-facebook-f"></i></a>
             <a href="#"><i class="fab fa-instagram"></i></a>
             <a href="#"><i class="fab fa-twitter"></i></a>
             <a href="#"><i class="fab fa-linkedin"></i></a>
